--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-autocomplete-rm",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "React-based autocomplete search for remote apis",
-  "main": "",
+  "main": "src/autocomplete.js",
   "scripts": {
     "test": "mocha tests/spec.js"
   },
