--- a/package.json
+++ b/package.json
@@ -63,13 +63,15 @@
   "bugs": {
     "url": "https://github.com/mriceuk/reactautocomplete/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "chai": "^4.0.2"
+  },
   "description": "React-based autocomplete search for remote apis",
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
@@ -129,7 +131,7 @@
   "scripts": {
     "build": "babel ./src --out-dir ./build",
     "prepublish": "npm run build",
-    "test": "mocha tests/spec.js"
+    "test": "mocha --require babel-core/register tests"
   },
   "version": "0.0.13"
 }
